fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -362,7 +362,7 @@ input[type=text], input[type=number] {
     display: inline-block;
     width: 60px;
     height: 34px;
-    margin: 0px 20px;
+    margin: 0px 0px 0px 20px;
   }
   
   /* Hide default HTML checkbox */
